--- a/Bard/Bard.entitlements
+++ b/Bard/Bard.entitlements
@@ -4,7 +4,11 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.vibink.ContainingAppForBard-3</string>
+		<string>group.com.vibink.ContainingAppForTrumped</string>
+	</array>
+	<key>keychain-access-groups</key>
+	<array>
+		<string>$(AppIdentifierPrefix)com.vibink.ContainingAppForTrumped.Trumped</string>
 	</array>
 </dict>
 </plist>
