--- a/ContainingAppForBard-3/ContainingAppForBard-3.entitlements
+++ b/ContainingAppForBard-3/ContainingAppForBard-3.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.vibink.ContainingAppForBard-3</string>
+		<string>group.com.vibink.ContainingAppForTrumped</string>
 	</array>
 </dict>
 </plist>
